--- a/web/app/store/templates/store/base.html
+++ b/web/app/store/templates/store/base.html
@@ -13,7 +13,7 @@
         <script src="{% static 'store/bootstrap.3.3.7.min.js' %}"></script>
 
         <title>ITLab Store</title>
-        <link rel="shortcut icon" href="{% static 'store/icon.png' %}"/>
+        <link rel="shortcut icon" href="{% static 'store/favicon.ico' %}"/>
 
         {% progressive_web_app_meta %}
         {% block head %}{% endblock %}
